<resources>
    <string name="app_name">Basha Pabo Koi?</string>
    <string name="google_maps_key">AIzaSyBqQWQmhVknktG58BFC4w8pFenyn_xtD60</string>
    <string name="you_can_find">You can find residence on google map through this app.</string>
    <string name="findings">FINDINGS</string>
    <string name="map">MAP</string>
    <string name="skip">SKIP</string>
    <string name="know">KNOW</string>
    <string name="elaborately">BROADLY</string>
    <string name="by_using_list">By using list view, you can learn about the residence elaborately.</string>
    <string name="quick_chat">By this app, the owners and the renters can communicate with each other with in build chat system.</string>
    <string name="chatting">CHATTING</string>
    <string name="quick">QUICK</string>
    <string name="welcome">WELCOME</string>
    <string name="to">TO</string>
    <string name="name">BASHA PABO KOI?</string>
    <string name="powered">Powered By : TEAM CV\'s</string>
    <string name="todo">TODO</string>
    <string name="phone_number">Enter your phone number</string>
    <string name="log_in">Log in</string>
    <string name="Cancel">Cancel</string>
    <string name="search_by_location">Search by location</string>
    <string name="profile">Profile</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark mode</string>
    <string name="create_an_ad">Create an ad</string>
    <string name="rate_us">Rate us</string>
    <string name="log_out">Log Out</string>
    <string name="create">Create</string>
    <string name="preference">Preferences</string>
    <string name="about_us">About us</string>
    <string name="exit">Exit</string>
    <string name="profile_name">Profile Name</string>
    <string name="next">Next</string>
    <string name="enter_your_profile_name">Enter your profile name</string>
    <string name="menu">Menu</string>
    <string name="list_view">List view</string>
    <string name="wish_list">Wish list</string>
    <string name="chats">Chats</string>
    <string name="home">Home</string>
    <string name="no_connection">No connection</string>
    <string name="back_online">Back online</string>
    <string name="tap_to_chat">tap to chat</string>
    <string name="type_a_message">Type a message</string>
    <string name="address">Address:</string>
    <string name="title">Title:</string>
    <string name="flat_type">Flat Type:</string>
    <string name="washrooms">Washrooms:</string>
    <string name="vacant_from">Vacant from:</string>
    <string name="verandas">Verandas:</string>
    <string name="bedrooms">Bedrooms:</string>
    <string name="floor">Floor:</string>
    <string name="religion">Religion:</string>
    <string name="genre">Genre:</string>
    <string name="other_services">Other Services:</string>
    <string name="basic_information">Basic Information:</string>
    <string name="current_bill">Current bill:</string>
    <string name="water_bill">Water bill:</string>
    <string name="gas_bill">Gas bill:</string>
    <string name="service_charge">Other charges:</string>
    <string name="other_facilities">Other Facilities:</string>
    <string name="lift">Lift:</string>
    <string name="lift_">Lift</string>
    <string name="generator">Generator:</string>
    <string name="generator_">Generator</string>
    <string name="parking">Parking:</string>
    <string name="parking_">Parking</string>
    <string name="security">Security:</string>
    <string name="security_">Security</string>
    <string name="gas">Gas:</string>
    <string name="gas_">Gas</string>
    <string name="wifi">WiFi:</string>
    <string name="wifi_">WiFi</string>
    <string name="description_of_your_ad">Description of your ad:</string>
    <string name="thana">Thana</string>
    <string name="done">DONE</string>
    <string name="create_ad">CREATE</string>
    <string name="accept_our_terms_and_agreements">Accept our terms and agreements</string>
    <string name="create_an_ad_title">CREATE AN AD</string>
    <string name="any">Any</string>
    <string name="muslim">Muslim</string>
    <string name="hindu">Hindu</string>
    <string name="christian">Christian</string>
    <string name="buddhism">Buddhism</string>
    <string name="none">-</string>
    <string name="flat">Flat</string>
    <string name="seat">Seat</string>
    <string name="sublet">Sublet</string>
    <string name="family">Family</string>
    <string name="small_family">Small family</string>
    <string name="only_student_male">Only student(Male)</string>
    <string name="only_student_female">Only Student(Female)</string>
    <string name="bachelor">Bachelor</string>
    <string name="only_male">Only male</string>
    <string name="only_female">Only female</string>
    <string name="male_service_holder">Male Service holder</string>
    <string name="female_service_holder">Female Service holder</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="thirteen">13</string>
    <string name="fourteen">14</string>
    <string name="fifteen">15</string>
    <string name="sixteen">16</string>
    <string name="seventeen">17</string>
    <string name="eighteen">18</string>
    <string name="nineteen">19</string>
    <string name="twenty">20</string>
    <string name="twenty_one">21</string>
    <string name="twenty_two">22</string>
    <string name="twenty_three">23</string>
    <string name="twenty_four">24</string>
    <string name="twenty_five">25</string>
    <string name="five_plus">5+</string>
    <string name="taka_sign">৳</string>
    <string name="enter_your_otp_here">Enter your OTP here</string>
    <string name="continue_sign_up">Continue</string>
    <string name="please_check_your_phone_s_inbox_for_the_otp">Please check your inbox for the OTP.</string>
    <string name="is_your_number">Is your number: </string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="tap_on_the_image_to_update_your_profile_picture">Tap on the image to update your profile picture.</string>
    <string name="enter_your_profile_name_here">Enter your profile name here</string>
    <string name="profile_name_and_picture">Profile name and picture</string>
    <string name="rent">Rent:</string>
    <string name="add_photos">Add photos:</string>
    <string name="phone_number_profile">Phone number</string>
    <string name="number_eg">01XXXXXXXXX</string>
    <string name="email_eg">name@example.com</string>
    <string name="rent_eg">10000</string>
    <string name="your_ads">Your ads:</string>
    <string name="check_your_wish_list">Check your Wish list</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ad_description">AD DESCRIPTION</string>
    <string name="other_charges">Other charges:</string>
    <string name="details">Details:</string>
    <string name="ad_by">Ad by:</string>
    <string name="rate_this_ad">Rate this ad:</string>
    <string name="washroom">washroom</string>
    <string name="washroom_">washrooms</string>
    <string name="veranda">veranda</string>
    <string name="veranda_">verandas</string>
    <string name="bedroom">bedroom</string>
    <string name="bedroom_">bedrooms</string>
    <string name="floor_">floor</string>
    <string name="electricity_bill">electricity bill</string>
    <string name="water_bill_">water bill</string>
    <string name="gas_bill_">gas bill</string>
    <string name="service_charge_">service charge</string>
    <string name="adabar">Adabar</string>
    <string name="zimpur">Azimpur</string>
    <string name="badda">Badda</string>
    <string name="bangshal">Bangshal</string>
    <string name="bimanbandar">Bimanbandar</string>
    <string name="cantonment">Cantonment</string>
    <string name="chowkbazar">Chowkbazar</string>
    <string name="darus_salam">Darus Salam</string>
    <string name="demra">Demra</string>
    <string name="dhanmondi">Dhanmondi</string>
    <string name="gendaria">Gendaria</string>
    <string name="gulshan">Gulshan</string>
    <string name="hazaribagh">Hazaribagh</string>
    <string name="kadamtali">Kadamtali</string>
    <string name="kafrul">Kafrul</string>
    <string name="kalabagan">Kalabagan</string>
    <string name="kamrangirchar">Kamrangirchar</string>
    <string name="khilgaon">Khilgaon</string>
    <string name="khilkhet">Khilkhet</string>
    <string name="kotwali">Kotwali</string>
    <string name="lalbagh">Lalbagh</string>
    <string name="mirpur_model">Mirpur Model</string>
    <string name="mohammadpur">Mohammadpur</string>
    <string name="motijheel">Motijheel</string>
    <string name="new_market">New Market</string>
    <string name="pallabi">Pallabi</string>
    <string name="paltan">Paltan</string>
    <string name="panthapath">Panthapath</string>
    <string name="ramna">Ramna</string>
    <string name="rampura">Rampura</string>
    <string name="sabujbagh">Sabujbagh</string>
    <string name="shah_ali">Shah Ali</string>
    <string name="shahbag">Shahbag</string>
    <string name="sher_e_bangla">Sher-e-Bangla</string>
    <string name="shyampur">Shyampur</string>
    <string name="sutrapur">Sutrapur</string>
    <string name="tejgaon_industrial_area">Tejgaon Industrial Area</string>
    <string name="tejgaon">Tejgaon</string>
    <string name="turag">Turag</string>
    <string name="uttar_khan">Uttar Khan</string>
    <string name="uttara">Uttara</string>
    <string name="vatara">Vatara</string>
    <string name="wari">Wari</string>
    <string name="edit_ad">EDIT YOUR AD</string>
    <string name="address_eg">Update your address</string>
    <string name="others">Others</string>
    <string name="settings">Settings</string>
    <string name="lang">ENG</string>
    <string name="off">OFF</string>
    <string name="settings_title">SETTINGS</string>
    <string name="eng">ENG</string>
    <string name="ban">বাং</string>
    <string name="on">ON</string>
    <string name="submit">SUBMIT</string>
    <string name="report_a_bug">REPORT A BUG</string>
    <string name="found_a_bug_click_here_to_report_it">Found a bug? click here to report it.</string>
    <string name="report">REPORT</string>
    <string name="share_your_experience">SHARE YOUR EXPERIENCE</string>
    <string name="share">SHARE</string>
    <string name="share_your_using_experience_about_the_app">Share your using experience about the app.</string>
    <string name="show_details">details</string>
    <string name="marker_added">Marker added</string>
    <string name="update">UPDATE</string>
    <string name="are_you">Are you at your place?</string>
    <string name="we_need_location">We need to add a marker in the map so that renters can find your place easily. If you are not at your place then you can update map marker by updating your ad later.</string>
    <string name="rent_is_going_on">Rent is going on</string>
    <string name="address_eg_1">B-15, G-4, Motijheel, A.G.B colony, Hospital zone, Dhaka-1000.</string>
    <string name="date_eg">1 April, 2021</string>
    <string name="bedroom_eg">2 bedrooms</string>
    <string name="wash_eg">3 washrooms</string>
    <string name="ver_eg">3 verandas</string>
    <string name="floor_eg">5th floor</string>
    <string name="e_bill_eg">1000 electricity bill</string>
    <string name="g_bill_eg">1000 gas bill</string>
    <string name="w_bill_eg">1000 water bill</string>
    <string name="s_charge_eg">5000 service charge</string>
    <string name="onnnk_xooooosssss">Onnnk xooooosssss</string>
    <string name="find_on_map">Find on map</string>
    <string name="list_view_eg">THE LIST VIEW IS HERE!</string>
</resources>