<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/corner"
    android:background="?attr/bgColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupProfileActivity">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/pro_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="190dp"
        android:scaleType="centerCrop"
        android:src="@drawable/user"
        android:elevation="30dp"
        android:background="@drawable/profile_image_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:riv_oval="true" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/profile_name_and_picture"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/pro_pic"
        app:layout_constraintStart_toStartOf="@+id/pro_pic"
        app:layout_constraintTop_toBottomOf="@+id/pro_pic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textColor="?attr/defaultTextColor"
        android:text="@string/tap_on_the_image_to_update_your_profile_picture"
        app:layout_constraintEnd_toEndOf="@+id/info"
        app:layout_constraintStart_toStartOf="@+id/info"
        app:layout_constraintTop_toBottomOf="@+id/info" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="?attr/cardColor"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/profile_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/enter_your_profile_name_here"
                android:inputType="text"
                android:textColor="?attr/colorOnSecondary"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textCursorDrawable="@drawable/cursor_color"
                tools:ignore="RtlSymmetry,TextFields"
                android:autofillHints="@string/todo" />

            <Button
                android:id="@+id/continueBtn3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="?attr/bgColor"
                android:background="@drawable/button_bg"
                android:text="@string/continue_sign_up"
                app:cornerRadius="0dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>